Updated Base Page

--- a/SpaceEsc8bit/press/index.html
+++ b/SpaceEsc8bit/press/index.html
@@ -19,7 +19,7 @@
 				<img src="./img/logo.png" alt="logo" style="width:128px; height:128px;
 												border:3px solid #021a40;">
 				<h2 class="nav-header">Space Esc8bit</h2>
-				<a class="nav-header" target="_blank"  href="https://virtexedgedesign.com/">virtexedgedesign.com/</a>
+				<a class="nav-header" target="_blank"  href="http://games.virtexedge.com/SpaceEsc8bit/">games.virtexedge.com/SpaceEsc8bit/</a>
 				<ul class="uk-nav uk-nav-side">
 					<li class="uk-nav-divider"></li>
 					<li><a id="m-factsheet" href="#factsheet">Factsheet</a></li>
@@ -38,6 +38,23 @@
 						<div class="uk-width-medium-2-6">
 							<h2 id="factsheet">Factsheet</h2>
 							<p>
+								<p>
+									<strong>Game Site</strong>
+									<a class="nav-header" target="_blank"  href="http://games.virtexedge.com/SpaceEsc8bit/">games.virtexedge.com/SpaceEsc8bit/</a>
+								</p>
+								<p>
+								<strong>Platforms</strong><br>
+								<a href="https://play.google.com/store/apps/details?id=com.virtexedge.spacemisslerunlite" target="_blank">Android</a><br>
+								<a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1351201110&mt=8" target="_blank">iOS</a><br>
+							</p>
+							<p>
+								<strong>Release date:</strong><br>
+								March 01, 2018
+							</p>
+							<p>
+								<strong>Genres</strong><br>
+								Pixel Arcade, Missile Escape
+							</p>
 								<strong>Developer:</strong><br>
 								<a href="https://virtexedgedesign.com/" target="_blank" >Virtex Edge Design</a><br>
 								Toronto, Canada
