--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-# landing
-landing page for multiple projects
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=https://virtexedgedesign.com/projects/">
+        <script type="text/javascript">
+            window.location.href = "https://virtexedgedesign.com/projects/"
+        </script>
+        <link rel="canonical" href="https://virtexedgedesign.com/projects/"/>
+		<link rel="stylesheet" href="css/style.css">
+        <title>Virtex Edge - Page Redirection</title>
+    </head>
+    <body>
+        If you are not redirected automatically, follow this <a href='https://virtexedgedesign.com/projects/'>link to virtexedgedesign.com</a>.
+    </body>
+</html>
