Update of Press kit and Gifs

--- a/SpaceEsc8bit/press/index.html
+++ b/SpaceEsc8bit/press/index.html
@@ -19,7 +19,7 @@
 				<img src="./img/logo.png" alt="logo" style="width:128px; height:128px;
 												border:3px solid #021a40;">
 				<h2 class="nav-header">Space Esc8bit</h2>
-				<a class="nav-header" target="_blank"  href="http://games.virtexedge.com/SpaceEsc8bit/">games.virtexedge.com/SpaceEsc8bit/</a>
+				<a class="nav-header" target="_blank"  href="http://games.virtexedge.com/SpaceEsc8bit/">Game Site</a>
 				<ul class="uk-nav uk-nav-side">
 					<li class="uk-nav-divider"></li>
 					<li><a id="m-factsheet" href="#factsheet">Factsheet</a></li>
@@ -124,22 +124,65 @@
 							<hr>
 							<h2 id="trailers">Videos</h2>
 							<p>
-								<strong>Space Esc8bit Launch Trailer </strong>&nbsp;<a href="https://www.youtube.com/watch?v=Yc9LA4K0VZo"  target="_blank" >YouTube</a></p><div class="uk-responsive-width iframe-container">
+								<strong>Launch Trailer </strong>&nbsp;<a href="https://www.youtube.com/watch?v=Yc9LA4K0VZo"  target="_blank" >YouTube</a></p><div class="uk-responsive-width iframe-container">
 									<iframe width="560" height="315"  src="https://www.youtube.com/embed/Yc9LA4K0VZo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+								</div>
+								<strong>Teaser Trailer </strong>&nbsp;<a href="https://www.youtube.com/watch?v=wbj_LtgZauc"  target="_blank" >YouTube</a></p><div class="uk-responsive-width iframe-container">
+									<iframe width="560" height="315"  src="https://www.youtube.com/embed/wbj_LtgZauc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 								</div>
 								<hr>
 								<h2 id="images">Images</h2>
-								<div align="center" style="position: relative; height: 270px;width: 100%">
-									<iframe src="https://giphy.com/embed/celr77cWzeNxJCWaAC" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-								</div>
-								<br>
+								<p>
+									Below is a collection of Gifs and Screenshots. All Gifs and Screenshots are hosteed on <a href="https://gfycat.com/@virtexedgedesign/space_esc8bit" target="_blank">Gfycat</a> and <a href="https://imgur.com/a/zRTim" target="_blank">Imgur</a> respecitively for ease of linking.
+								</p>
+									<div style='position:relative;height: 270px; width:480px;margin: 0 auto;'>
+									<iframe src='https://gfycat.com/ifr/DecentClassicHyena' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0' allowfullscreen></iframe></div>
+									<br>
+									<div style='position:relative;height: 270px; width:480px;margin: 0 auto;'>
+									<iframe src='https://gfycat.com/ifr/CoarsePassionateJay' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0' allowfullscreen></iframe></div>
+									<br>
 								<div style='position:relative;height: 270px; width:480px;margin: 0 auto;'>
-									<iframe src='https://gfycat.com/ifr/AmbitiousRepentantAfricanelephant' frameborder='0' scrolling='no' width="480" height="270" style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
+									<iframe src='https://gfycat.com/ifr/RepulsiveTiredKusimanse' frameborder='0' scrolling='no' width="480" height="270" style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
 								</div>
 								<br>
 								<div style='position:relative;height: 270px; width:480px;margin: 0 auto;'>
 									<iframe src='https://gfycat.com/ifr/BogusTatteredIndianskimmer' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0' allowfullscreen></iframe></div>
-									<br>
+									<br><div align="center" style="position: relative; height: 270px;width: 100%">
+									<iframe src="https://giphy.com/embed/celr77cWzeNxJCWaAC" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+								</div>
+								<br>
+								<table width="100%">
+									<tr>
+										<th>
+											<img src="https://imgur.com/SNZUVk4.png"/>
+										</th>
+										<th>
+											<img src="https://imgur.com/pIVEcOp.png"/>
+										</th>
+									</tr>
+									<tr>
+										<th>
+											<img src="https://imgur.com/w2l2Ao9.png"/>
+										</th>
+										<th>
+											<img src="https://imgur.com/M2rJPBx.png"/>
+										</th>
+									</tr>
+									<tr>
+										<th>
+											<img src="https://imgur.com/ouSz7zH.png"/>
+										</th>
+										<th>
+											<img src="https://imgur.com/BRsA6Yz.png"/>
+										</th>
+									</tr>
+									<tr>
+										<th>
+											<img src="https://imgur.com/SuneDW6.png"/>
+										</th>
+									</tr>
+								</table>
+<br>
 									<p class="images-text">You can get more images from us by <a href="#contact">contacting us</a>!</p>
 									<hr>
 									<h2 id="logo">Logo &amp; Icon</h2>
@@ -234,7 +277,7 @@
 									<p>
 										<strong>Space Esc8bit Main Site </strong>
 										<br>
-										Space Esc8bits main site <a href="https://virtexedgedesign.github.io/Sites.SpaceEsc8bit/" target="_blank" >virtexedgedesign.github.io/Sites.SpaceEsc8bit</a>.
+										Space Esc8bits main site <a href="http://games.virtexedge.com/SpaceEsc8bit/" target="_blank" >games.virtexedge.com/SpaceEsc8bit</a>.
 									</p>
 									<p>
 										<strong>Android Releases</strong>
@@ -254,7 +297,7 @@
 											<p>
 												<strong>Inquiries</strong>
 												<br>
-												<a href="mailto:contact%20(at)%20virtexedgedesign%20dot%20com">contact (at) virtexedgedesign dot com</a>
+												<a href="mailto:contact@virtexedgedesign.com">contact (at) virtexedgedesign dot com</a>
 											</p>
 											<p>
 												<strong>Twitter</strong>
