--- a/SpaceEsc8bit/press/index.html
+++ b/SpaceEsc8bit/press/index.html
@@ -124,10 +124,11 @@
 							<hr>
 							<h2 id="trailers">Videos</h2>
 							<p>
-								<strong>Launch Trailer </strong>&nbsp;<a href="https://www.youtube.com/watch?v=Yc9LA4K0VZo"  target="_blank" >YouTube</a></p><div class="uk-responsive-width iframe-container">
+								<h3>Launch Trailer </h3>&nbsp;<a href="https://www.youtube.com/watch?v=Yc9LA4K0VZo"  target="_blank" >YouTube</a></p><div class="uk-responsive-width iframe-container">
 									<iframe width="560" height="315"  src="https://www.youtube.com/embed/Yc9LA4K0VZo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 								</div>
-								<strong>Teaser Trailer </strong>&nbsp;<a href="https://www.youtube.com/watch?v=wbj_LtgZauc"  target="_blank" >YouTube</a></p><div class="uk-responsive-width iframe-container">
+								<br><br>
+								<h3>Teaser Trailer </h3>&nbsp;<a href="https://www.youtube.com/watch?v=wbj_LtgZauc"  target="_blank" >YouTube</a></p><div class="uk-responsive-width iframe-container">
 									<iframe width="560" height="315"  src="https://www.youtube.com/embed/wbj_LtgZauc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 								</div>
 								<hr>
