Chaotic Workshop press kit updated

--- a/TheChaoticWorkshop/index.html
+++ b/TheChaoticWorkshop/index.html
@@ -1,1 +1,16 @@
-<!DOCTYPE HTML><html lang="en-US">    <head>        <meta charset="UTF-8">        <meta http-equiv="refresh" content="0; url=https://thechaoticworkshop.com">        <script type="text/javascript">            window.location.href = "https://thechaoticworkshop.com"        </script>        <link rel="canonical" href="https://thechaoticworkshop.com"/>    <link rel="stylesheet" href="css/style.css">        <title>Virtex Edge - Page Redirection</title>    </head>    <body>        If you are not redirected automatically, follow this <a href='https://thechaoticworkshop.com'>link to thechaoticworkshop.com</a>.    </body></html>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=https://thechaoticworkshop.com">
+        <script type="text/javascript">
+            window.location.href = "https://thechaoticworkshop.com"
+        </script>
+        <link rel="canonical" href="https://thechaoticworkshop.com"/>
+    <link rel="stylesheet" href="css/style.css">
+        <title>Virtex Edge - Page Redirection</title>
+    </head>
+    <body>
+        If you are not redirected automatically, follow this <a href='https://thechaoticworkshop.com'>link to thechaoticworkshop.com</a>.
+    </body>
+</html>
