--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://virtexedgedesign.com/projects/">
+        <meta http-equiv="refresh" content="0; url=https://virtexedge.design/projects/">
         <script type="text/javascript">
-            window.location.href = "https://virtexedgedesign.com/projects/"
+            window.location.href = "https://virtexedge.design/projects/"
         </script>
-        <link rel="canonical" href="https://virtexedgedesign.com/projects/"/>
+        <link rel="canonical" href="https://virtexedge.design/projects/"/>
 		<link rel="stylesheet" href="css/style.css">
         <title>Virtex Edge - Page Redirection</title>
     </head>
     <body>
-        If you are not redirected automatically, follow this <a href='https://virtexedgedesign.com/projects/'>link to virtexedgedesign.com</a>.
+        If you are not redirected automatically, follow this <a href='https://virtexedge.design/projects/'>link to virtexedgedesign.com</a>.
     </body>
 </html>
